--- a/proj.win32/workspace.vcxproj.filters
+++ b/proj.win32/workspace.vcxproj.filters
@@ -10,6 +10,9 @@
     <Filter Include="resource">
       <UniqueIdentifier>{715254bc-d70b-4ec5-bf29-467dd3ace079}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Classes\tetris">
+      <UniqueIdentifier>{4f1bb174-bf8a-4796-b422-5dcfa14d04ca}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -21,6 +24,15 @@
     <ClCompile Include="..\Classes\HelloWorldScene.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\tetris\Block.cpp">
+      <Filter>Classes\tetris</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\tetris\GameController.cpp">
+      <Filter>Classes\tetris</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\tetris\GamePanel.cpp">
+      <Filter>Classes\tetris</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -31,6 +43,18 @@
     </ClInclude>
     <ClInclude Include="..\Classes\HelloWorldScene.h">
       <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\tetris\Block.h">
+      <Filter>Classes\tetris</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\tetris\GameController.h">
+      <Filter>Classes\tetris</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\tetris\GamePanel.h">
+      <Filter>Classes\tetris</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\tetris\TetrisDef.h">
+      <Filter>Classes\tetris</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
