--- a/proj.win32/workspace.vcxproj
+++ b/proj.win32/workspace.vcxproj
@@ -135,11 +135,18 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="..\Classes\tetris\Block.cpp" />
+    <ClCompile Include="..\Classes\tetris\GameController.cpp" />
+    <ClCompile Include="..\Classes\tetris\GamePanel.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
+    <ClInclude Include="..\Classes\tetris\Block.h" />
+    <ClInclude Include="..\Classes\tetris\GameController.h" />
+    <ClInclude Include="..\Classes\tetris\GamePanel.h" />
+    <ClInclude Include="..\Classes\tetris\TetrisDef.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
