--- a/proj.win32/workspace.vcxproj
+++ b/proj.win32/workspace.vcxproj
@@ -136,15 +136,23 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\GamePanel.cpp" />
+    <ClCompile Include="..\OperatorLayer.cpp" />
+    <ClCompile Include="..\Piece.cpp" />
     <ClCompile Include="..\TetrisBlock.cpp" />
+    <ClCompile Include="..\TetrisLayer.cpp" />
+    <ClCompile Include="..\TetrisScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\GamePanel.h" />
+    <ClInclude Include="..\OperatorLayer.h" />
+    <ClInclude Include="..\Piece.h" />
     <ClInclude Include="..\TetrisBlock.h" />
     <ClInclude Include="..\TetrisDef.h" />
+    <ClInclude Include="..\TetrisLayer.h" />
+    <ClInclude Include="..\TetrisScene.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
