--- a/proj.win32/workspace.vcxproj.filters
+++ b/proj.win32/workspace.vcxproj.filters
@@ -36,10 +36,12 @@
     <ClCompile Include="..\Piece.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
-    <ClCompile Include="..\OperatorLayer.cpp">
+    <ClCompile Include="..\BlockFactory.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
-    <ClCompile Include="..\BlockGroup.cpp" />
+    <ClCompile Include="..\Classes\OperateLayer.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -69,10 +71,10 @@
     <ClInclude Include="..\Piece.h">
       <Filter>Classes</Filter>
     </ClInclude>
-    <ClInclude Include="..\OperatorLayer.h">
+    <ClInclude Include="..\BlockFactory.h">
       <Filter>Classes</Filter>
     </ClInclude>
-    <ClInclude Include="..\BlockGroup.h">
+    <ClInclude Include="..\Classes\OperateLayer.h">
       <Filter>Classes</Filter>
     </ClInclude>
   </ItemGroup>
